# molibot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AGENT_EXECUTION_FLOW.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  DESIGN-Liquid-Glass.md  DESIGN.md  DESIGN.vercel.md  Dockerfile  Makefile  architecture.md  components.json  design-qa.md  design-temp.md  design.dark.md  docker-compose.yml  features.md  findings.md  molipibot-settings-anthropic-2.html  molipibot-settings-anthropic-2.html.artifact.json  molipibot-settings-anthropic.html  molipibot-settings-anthropic.html.artifact.json  notes.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prd.md  progress.md  readme.md  svelte.config.js  task_plan.md  ui-library-batch1-prompt.md  ui-library-task-prompt.md  ui-library-tech-design.md  v2.0-analysis.md  v2.0.md  (+3 more)
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.bundle.conf.json  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: app_menu.rs  audio.rs  desktop_preferences.rs  lib.rs  main.rs  native_feedback.rs  service.rs  supervisor.rs
docs/: README.md  acp-codex-mvp.md  agent-subagent-sandbox.md  hermes-agent.md  implementation_plan.md  memory_research.md  plugin-development.md  plugin-manifest.md  prompt_desc.md  sandbox-approve-architecture.md  sandbox-approve-optimization.md  self-evolution-optimization-plan.md  session-control-commands.md  structure-migration-plan.md
plans/: 001-streaming-render-smoothness.md  002-chat-entrance-motion.md  README.md
runlogs/: run-456.txt
scripts/: build-desktop-tauri.mjs  finalize-desktop-release.mjs  finalize-desktop-release.test.mjs  md-loader.js  prepare-desktop-runtime.mjs  print-old-compaction.js  register-loader.js  relocate-agent.js  run-all-agent-tests.js  skill-drafts-cleanup.js  start-server.mjs  svelte-adapter-node-sqlite.js  svelte-adapter-node-sqlite.test.mjs  sync-desktop-version.mjs  test-loader-hooks.js  test-loader.js  update-imports-v2.js  update-imports.js
(+1141 files in other folders)
